Add '26.2-snapshot-5' sources